removed windows phone

--- a/Simple3DGame/Simple3DGame.vcxproj
+++ b/Simple3DGame/Simple3DGame.vcxproj
@@ -120,6 +120,9 @@
     <AppxBundlePlatforms>x64|arm</AppxBundlePlatforms>
     <PackageCertificateThumbprint>AB839B9879D0024EDD811BD92541667092CDDCB7</PackageCertificateThumbprint>
     <AppxBundle>Always</AppxBundle>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <Link>
